# Wrike-CLI-Client

./: .all-contributorsrc  Cargo.toml  README.md  Readme.md
.github/workflows/: release.yml
src/: args.rs  contacts.rs  folders.rs  main.rs  tasks.rs  workflows.rs
