[package]
name = "wrike-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
anyhow = "1.0.70"
