[package]
name = "wrs"
version = "0.1.0"
edition = "2021"
description = "A Wrike CLI client"
readme = "README.md"
homepage = "https://github.com/LeBaronDeCharlus/wrs/"
repository = "https://github.com/LeBaronDeCharlus/wrs/"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
anyhow = "1.0.70"
